--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,27 +1,39 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title></title>
-        <link rel="stylesheet" type="text/css" th:href="@{css/dap.css}" href= "../static/css/dap.css">
+        <title>Dashboard Administrator</title>
+  <!-- Custom styles for this template-->
+  <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
+     <!--link rel="stylesheet" type="text/css" th:href="@{css/dap.css}" href= "../static/css/dap.css"-->
+     <!--link rel="stylesheet" type="text/css" th:href="@{css/dap2.css}" href= "../static/css/dap2.css"-->
     </head>
     <body>
 
     <!--<span> User "brutes"</span><span th:text="${users}"></span>-->
 
-    <table>
-      <tr>
+ <div class="bs-example">
+    <table class="table">
+        <thead>
+      
         <th>ID</th>
         <th>Token</th> 
         <th>Expire</th>
         <th>Refresh</th>
-      </tr>
+        <th>Action</th>
+        </thead>
+      
+      
+      <tbody>
        <tr th:each="entry: ${users}">
         <td th:text="${entry.key}">Bob</td>
         <td th:text="${entry.value.accessToken}"></td>
         <td th:text="${entry.value.expirationTimeMilliseconds}"></td>
         <td th:text="${entry.value.refreshToken}"></td>
-      </tr>
+      <td> <a th:href="@{/delete/user(userkey=${entry.key})}" > X </a></td>
+      </tbody>
+     
     </table>
-
+	</div>
+	</div>
     </body>
         </html>
