Ajout des remarques sur les template Thymeleaf

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,3 +1,4 @@
+ <!-- TODO chy by Djer |IDE| FOrmate ton Code (ton IDE peu t'aider) -->
 <html>
     <head>
         <meta charset="UTF-8">
@@ -14,7 +15,7 @@
  <div class="bs-example">
     <table class="table">
         <thead>
-      
+      <!-- TODO chy by Djer |Thymleaf| Les balise "<th>" devraient être a l'intérieur d'un "<tr>" -->
         <th>ID</th>
         <th>Token</th> 
         <th>Expire</th>
